# rules_play_routes

./: .bazelrc  .bazelrc.ci  .bazelrc.travis  .bazelversion  .gitignore  .travis.yml  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  dependencies.yml  gen-deps.sh  play-routes.bzl  play_2_5_routes_compiler_cli_install.json  play_2_6_compilers_install.json  play_2_6_routes_compiler_cli_install.json  play_2_7_compilers_install.json  play_2_7_routes_compiler_cli_install.json  play_2_8__2_12_routes_compiler_cli_install.json  play_2_8__2_13_routes_compiler_cli_install.json  play_2_8_routes_compiler_cli_install.json  play_2_9_routes_compiler_cli_install.json  play_3_0__2_13_routes_compiler_cli_install.json  play_routes_compiler_cli_2_13_install.json  play_routes_compiler_cli_3_install.json  play_routes_install.json  play_routes_test_2_13_install.json  play_routes_test_3_install.json  play_routes_test_install.json  setup-tools.sh  test-dependencies.yml  test_workspace.bzl  versions.bzl  workspace.bzl
.github/workflows/: ci.yml
compiler-cli/: BUILD.bazel
default-compiler-clis/: BUILD.bazel
dev/: BUILD.bazel
dev/stardoc/: BUILD.bazel
docs/stardoc/: play-routes.md
play-routes/: BUILD  BUILD.bazel  play-routes-helper.sh  play-routes-toolchain.bzl  play-routes.bzl
play-routes-compiler/: BUILD.bazel
play-routes-compiler-cli/: BUILD.bazel  CommandLinePlayRoutesCompiler.scala  Foo.java  play-routes-compiler-cli.bzl  pom.xml.tmpl
play-routes-compiler/src/main/scala/: CommandLinePlayRoutesCompiler.scala
play-routes-toolchain/: BUILD.bazel  create-toolchain.bzl  play-routes-toolchain.bzl  register-toolchains.bzl  transitions.bzl
routes-compiler/: BUILD  BUILD.bazel
routes-compiler/conf/: routes
scala/: BUILD  BUILD.bazel  version.bzl
scripts/: format.sh  gen-deps.sh  gen-docs.sh  publish.sh  skylint.sh
src/main/scala/: LucidPlayRoutesCompiler.scala
test/: BUILD.bazel  PlayForwardRoutesOnlyTest.scala  PlayReverseRoutesOnlyTest.scala  PlayRoutesCompilerTest.scala  play-routes-compiler-test.bzl  play_routes_compiler_bazel_e2e_test.sh  play_routes_compiler_e2e_test.sh  reproducibility_test.sh  run_all_tests.sh
test/app/binders/: package.scala
test/app/controllers/: Controller1.scala  Controller2.scala  Controller3.scala  GeneratorController.scala  NamespaceReverseRoutesController.scala  ReverseRoutesController.scala  UserController.scala
test/app/model/: User.scala
test/common/: TestReverseRoutesOnly.scala
test/conf/: additional_imports.routes  application.conf  basic1.routes  basic2.routes  generator.routes  large.routes  namespace_router.routes  reverse_router.routes  routes
test/conf2/: routes
tools/: bazel  bazel.rc  ci-skydoc-update.sh  ci-stardoc-update.sh  gen-ignore.sh  lemur_rsa.enc  skylint.sh
