java_binary(
    name = "play-routes-compiler-cli",
    main_class = "rulesplayroutes.routes.CommandLinePlayRoutesCompiler",
    visibility = ["//visibility:public"],
    # runtime_deps = ["@play_routes_compiler_cli//:com_lucidchart_play_routes_compiler_cli_3"],
    runtime_deps = [":play-routes-compiler-cli-jar"],
)

# TODO: remove
# java_import(
#     name = "play-routes-compiler-cli-jar",
#     jars = [
#         "play-routes-compiler-lib.jar",
#     ],
#     visibility = ["//visibility:public"],
#     deps = [
#         "@play_routes_compiler_cli//third_party/bazel/src/java_tools/buildjar/java/com/google/devtools/build/buildjar/jarhelper",
#         "@play_routes_compiler_cli_maven//:com_github_scopt_scopt_3",
#         "@play_routes_compiler_cli_maven//:org_playframework_play_routes_compiler_3",
#         "@rules_scala_annex//src/main/scala/higherkindness/rules_scala/common/error",
#         "@rules_scala_annex//src/main/scala/higherkindness/rules_scala/common/sandbox",
#         "@rules_scala_annex//src/main/scala/higherkindness/rules_scala/common/worker",
#     ],
# )
