load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary")

scala_binary(
  name = "play-routes-compiler",
  srcs = glob(["src/main/**/*.scala"]),
  visibility = ["//visibility:public"],
  scalacopts = ["-Ywarn-unused-import"],
  main_class = "rulesplayroutes.routes.CommandLinePlayRoutesCompiler",
  deps = [
    "@com_typesafe_play_routes_compiler_2_11//jar",
    "@scala//:scala-library",
    "@scala//:scala-parser-combinators",
    "@scala//:scala-reflect",
    "@com_github_scopt_scopt_2_11//jar",
  ],
  runtime_deps = [
    "@commons_io_commons_io//jar",
    "@com_typesafe_play_twirl_api_2_11//jar",
    "@scala//:scala-xml",
  ],
)
