load("@rules_scala_annex//rules:scala.bzl", scala_binary = "annex_scala_binary")

scala_binary(
  name = "play-routes-compiler",
  srcs = glob(["src/main/**/*.scala"]),
  visibility = ["//visibility:public"],
  scalacopts = ["-Ywarn-unused-import"],
  main_class = "rulesplayroutes.routes.CommandLinePlayRoutesCompiler",
  deps = [
    "@play_routes_com_typesafe_play_routes_compiler_2_11//jar",
    "@play_routes_com_github_scopt_scopt_2_11//jar",
    "@scala_scala_reflect//jar",
  ],
)
