load("@rules_scala_annex//rules:scala.bzl", "scala_binary")

scala_binary(
  name = "play-routes-compiler",
  srcs = glob(["src/main/**/*.scala"]),
  visibility = ["//visibility:public"],
  scalacopts = ["-Ywarn-unused-import"],
  main_class = "rulesplayroutes.routes.CommandLinePlayRoutesCompiler",
  deps = [
    "@play_routes//:com_typesafe_play_routes_compiler_2_11",
    "@play_routes//:com_github_scopt_scopt_2_11",
    "@play_routes//:org_scala_lang_scala_reflect",
  ],
)
