load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//lib:paths.bzl", "paths")
load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

[
    stardoc(
        name = paths.replace_extension(file, "_doc").replace("/", "_"),
        out = paths.replace_extension(file, ".md").replace("/", "_"),
        input = file,
        symbol_names = ["play_routes"],
        deps = [
            "//play-routes:bzl_internal",
        ],
    )
    for file in glob(["**/*.bzl"])
]

pkg_tar(
    name = "docs",
    srcs = [paths.replace_extension(file, ".md").replace("/", "_") for file in glob(["**/*.bzl"])],
    mode = "0644",
)

bzl_library(
    name = "bzl_internal",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        ":jdk_toolchain_utils",
        "//play-routes-toolchain:bzl",
        "@bazel_skylib//lib:dicts",
        "@bazel_skylib//lib:paths",
        "@rules_java//java/common",
    ],
)

bzl_library(
    name = "jdk_toolchain_utils",
    srcs = ["@bazel_tools//tools/jdk:toolchain_utils.bzl"],
)
