load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(["play-routes.bzl"])

bzl_library(
    name = "bzl_internal",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        ":jdk_toolchain_utils",
        "//play-routes-toolchain:bzl",
        "@bazel_skylib//lib:dicts",
        "@bazel_skylib//lib:paths",
        "@rules_java//java/common",
    ],
)

bzl_library(
    name = "jdk_toolchain_utils",
    srcs = ["@bazel_tools//tools/jdk:toolchain_utils.bzl"],
)
