load(
    "@rules_scala_annex//rules:scala.bzl",
    "configure_bootstrap_scala",
    "configure_zinc_scala",
)
load(":version.bzl", "scala_2_13_version", "scala_3_version")

# Scala 3
compiler_classpath_3 = [
    "@play_routes_compiler_cli_3//:org_scala_lang_scala3_compiler_3",
    "@play_routes_compiler_cli_3//:org_scala_lang_scala3_library_3",
]

runtime_classpath_3 = [
    "@play_routes_compiler_cli_3//:org_scala_lang_scala3_library_3",
    "@play_routes_compiler_cli_3//:org_scala_lang_scala3_interfaces",
    "@play_routes_compiler_cli_3//:org_scala_lang_tasty_core_3",
]

configure_bootstrap_scala(
    name = "bootstrap_3",
    compiler_classpath = compiler_classpath_3,
    runtime_classpath = runtime_classpath_3,
    version = scala_3_version,
)

configure_zinc_scala(
    name = "zinc_3",
    compiler_bridge = "@play_routes_compiler_cli_3//:org_scala_lang_scala3_sbt_bridge",
    compiler_classpath = compiler_classpath_3,
    runtime_classpath = runtime_classpath_3,
    version = scala_3_version,
    visibility = ["//visibility:public"],
)

alias(
    name = "default_scala",
    actual = ":zinc_3",
    visibility = ["//visibility:public"],
)

# Scala 2.13
compiler_classpath_2_13 = [
    "@play_routes_compiler_cli_2_13//:org_scala_lang_scala_compiler",
    "@play_routes_compiler_cli_2_13//:org_scala_lang_scala_library",
    "@play_routes_compiler_cli_2_13//:org_scala_lang_scala_reflect",
]

runtime_classpath_2_13 = [
    "@play_routes_compiler_cli_2_13//:org_scala_lang_scala_library",
]

configure_zinc_scala(
    name = "zinc_2_13",
    compiler_bridge = "@play_routes_compiler_cli_2_13//:org_scala_sbt_compiler_bridge_2_13",
    compiler_classpath = compiler_classpath_2_13,
    runtime_classpath = runtime_classpath_2_13,
    version = scala_2_13_version,
    visibility = ["//visibility:public"],
)
