load(
    "@rules_scala_annex//rules:register_toolchain.bzl",
    "register_zinc_toolchain",
)
load(":version.bzl", "scala_2_13_version", "scala_3_version")

# Scala 3
compiler_classpath_3 = [
    "@play_routes_compiler_cli_3//:org_scala_lang_scala3_compiler_3",
    "@play_routes_compiler_cli_3//:org_scala_lang_scala3_library_3",
]

runtime_classpath_3 = [
    "@play_routes_compiler_cli_3//:org_scala_lang_scala3_library_3",
    "@play_routes_compiler_cli_3//:org_scala_lang_scala3_interfaces",
    "@play_routes_compiler_cli_3//:org_scala_lang_tasty_core_3",
]

register_zinc_toolchain(
    name = "zinc_3",
    compiler_bridge = "@play_routes_compiler_cli_3//:org_scala_lang_scala3_sbt_bridge",
    compiler_classpath = compiler_classpath_3,
    runtime_classpath = runtime_classpath_3,
    version = scala_3_version,
    visibility = ["//visibility:public"],
)

alias(
    name = "default_scala",
    actual = ":zinc_3",
    visibility = ["//visibility:public"],
)

# Scala 2.13
compiler_classpath_2_13 = [
    "@play_routes_compiler_cli_2_13//:org_scala_lang_scala_compiler",
    "@play_routes_compiler_cli_2_13//:org_scala_lang_scala_library",
    "@play_routes_compiler_cli_2_13//:org_scala_lang_scala_reflect",
]

runtime_classpath_2_13 = [
    "@play_routes_compiler_cli_2_13//:org_scala_lang_scala_library",
]

register_zinc_toolchain(
    name = "zinc_2_13",
    compiler_bridge = "@play_routes_compiler_cli_2_13//:org_scala_sbt_compiler_bridge_2_13",
    compiler_classpath = compiler_classpath_2_13,
    global_scalacopts = ["-Ytasty-reader"],
    runtime_classpath = runtime_classpath_2_13,
    version = scala_2_13_version,
    visibility = ["//visibility:public"],
)
