load("@rules_scala_annex//rules:scala.bzl", scala_test = "annex_scala_test")
load("//play-routes:play-routes.bzl", "play_routes")

play_routes(
  name = "play-routes-basic",
  srcs = ["conf/routes", "conf/basic2.routes"],
  include_play_imports = True,
)

play_routes(
  name = "play-routes-additional-imports",
  srcs = ["conf/additional_imports.routes"],
  include_play_imports = True,
  routes_imports = [
    "rulesplayroutes.test.User",
    "rulesplayroutes.test.binders._",
  ],
)

play_routes(
  name = "play-routes-different-generator",
  srcs = ["conf/generator.routes"],
  include_play_imports = True,
  routes_generator = "play.routes.compiler.StaticRoutesGenerator",
)

play_routes(
  name = "play-routes-reverse-router",
  srcs = ["conf/reverse_router.routes"],
  include_play_imports = True,
  generate_reverse_router = True,
)

# TOOD: Figure out what this does and add the test for it
# play_routes(
#   name = "play-routes-namespace-router",
#   srcs = ["conf/namespace_router.routes"],
#   include_play_imports = True,
#   generate_reverse_router = True,
#   namespace_reverse_router = True,
# )

scala_test(
  name = "play-routes-compiler-test",
  srcs = glob(["app/**/*.scala"]) + [
    "PlayRoutesCompilerTest.scala",
    ":play-routes-basic",
    ":play-routes-additional-imports",
    ":play-routes-different-generator",
    ":play-routes-reverse-router",
    # ":play-routes-namespace-router",
  ],
  deps = [
    "@org_specs2_specs2_common_2_11//jar",
    "@org_specs2_specs2_core_2_11",
    "@org_specs2_specs2_matcher_2_11//jar",
    "@com_typesafe_akka_akka_actor_2_11//jar",
    "@com_typesafe_play_play_2_11//jar",
    "@com_typesafe_play_play_specs2_2_11//jar",
    "@com_typesafe_play_play_test_2_11//jar",
  ]
)

# scala_specs2_junit_test(
#   name = "play-routes-compiler-additional-imports-test",
#   deps = play_deps,
#   suffixes = ["Test"],
#   srcs = glob(["app/**/*.scala"]) + [
#     "PlayRoutesCompilerBasicTest.scala",
#     ":play-routes-additional-imports",
#   ],
# )

# scala_specs2_junit_test(
#   name = "play-routes-compiler-generator-test",
#   deps = play_deps,
#   suffixes = ["Test"],
#   srcs = glob(["app/**/*.scala"]) + [
#     "PlayRoutesCompilerBasicTest.scala",
#     ":play-routes-different-generator",
#   ],
# )

# scala_specs2_junit_test(
#   name = "play-routes-compiler-reverse-router-test",
#   deps = play_deps,
#   suffixes = ["Test"],
#   srcs = glob(["app/**/*.scala"]) + [
#     "PlayRoutesCompilerBasicTest.scala",
#     ":play-routes-reverse-router",
#   ],
# )

# scala_specs2_junit_test(
#   name = "play-routes-compiler-namespace-reverse-router-test",
#   deps = play_deps,
#   suffixes = ["Test"],
#   srcs = glob(["app/**/*.scala"]) + [
#     "PlayRoutesCompilerBasicTest.scala",
#     ":play-routes-basic-namespace-router",
#   ],
# )
